add deployment_input_properties and store original request in service_order